# oxide-shell

./: .gitignore  Cargo.toml  GITHUB_SETUP.md  LICENSE  QUICK_RELEASE_STEPS.md  README.md  build.rs  file2.txt  file5.txt  file6.txt  history.txt  tmp_rovodev_final_test.ps1  tmp_rovodev_test_report.md
Users/MODEL/Desktop/duka/codecrafters-shell-rust/: file5.txt
src/: history.txt  main.rs
src/shell/: commands.rs  mod.rs  parser.rs
src/shell/commands/: cat_command.rs  cd_command.rs  chain.rs  control_flow.rs  echo_command.rs  export_command.rs  external_command.rs  ls_command.rs  map_commands.rs  mod.rs  pipeline.rs  pwd_command.rs  type_command.rs  unset_command.rs
