[package]
name = "oxide-shell"
version = "0.1.0"
authors = ["Yeabsira Shimelis"]
edition = "2021"
rust-version = "1.80"
description = "A POSIX-compliant shell built with Rust"
license = "MIT"
repository = "https://github.com/Yeabsirashimelis/oxide-shell"
homepage = "https://github.com/Yeabsirashimelis/oxide-shell"
keywords = ["shell", "cli", "repl", "posix", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
rustyline = "14.0.0"
once_cell = "1.19.0"
os_pipe = "1"                                    # cross-platform pipes for piping